fix: hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@
   font-family: monospace;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 :root {
   --border-color: #888888;
   --hover-background-color: #f0f0f0;
